--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "nodemon": "^3.0.2",
     "prisma": "^5.7.0",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "i": "^0.3.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
