--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/main.ts"
+    "dev": "nodemon ./src/main.ts",
+    "deploy": "git add . && git commit -m 'feature: deploy' && git push production production && ssh root@18.228.212.31 'rm -r /var/www/quick-imob-back/dist' && pm2 delete main && tsc && pm2 start dist/main.js"
   },
   "keywords": [],
   "author": "",
