--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.485.0",
+    "@aws-sdk/s3-request-presigner": "^3.485.0",
     "@prisma/client": "^5.7.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "aws-sdk": "^2.1530.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -22,6 +25,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
     "prisma": "^5.7.0",
     "uuid": "^9.0.1",
@@ -30,6 +34,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "i": "^0.3.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
